--- a/src/app/ui-support/nav-bar/nav-bar.component.scss
+++ b/src/app/ui-support/nav-bar/nav-bar.component.scss
@@ -6,6 +6,10 @@
   background-color: #0736e1;
   color: white;
 }
+.nav-name-item
+{
+  margin-left: 10px;
+}
 .menuhover:hover {
   color: brown;
 }
