--- a/src/app/components/inventory/imports/imports.component.html
+++ b/src/app/components/inventory/imports/imports.component.html
@@ -134,6 +134,6 @@
   </div>
 </div>
 <!-- footer -->
-<footer class="content1">
+<!--<footer class="content1">
   &copy; <b>eSpyCons 2020 | All Rights Reserved</b>
-</footer>
+</footer>-->
