--- a/src/app/components/reports/production-report/production-report.component.html
+++ b/src/app/components/reports/production-report/production-report.component.html
@@ -93,6 +93,6 @@
   </mat-card-content>
 </mat-card>
 <!-- footer -->
-<footer class="content1">
+<!--<footer class="content1">
   &copy; <b>eSpyCons 2020 | All Rights Reserved</b>
-</footer>
+</footer>-->
