--- a/src/app/components/workalloc/workalloc.component.html
+++ b/src/app/components/workalloc/workalloc.component.html
@@ -172,6 +172,6 @@
 </mat-tab-group>
 <!-- footer -->
 
-<footer class="content1">
+<!--<footer class="content1">
   &copy; <b>eSpyCons 2020 | All Rights Reserved</b>
-</footer>
+</footer>-->
