--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -55,6 +55,6 @@
 
 <!-- footer -->
 
-<footer class="content1">
+<!--<footer class="content1">
   &copy; <b>eSpyCons 2020 | All Rights Reserved</b>
-</footer>
+</footer>-->
