--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -70,6 +70,6 @@
 
 <br />
 <!-- Footer -->
-<!-- <footer class="content1">
+<footer class="content1">
   &copy; <b>eSpyCons 2020 | All Rights Reserved</b>
-</footer> -->
+</footer> 
