--- a/src/app/components/masters/users/users.component.html
+++ b/src/app/components/masters/users/users.component.html
@@ -1,202 +1,12 @@
 <div class="row font-weight-normal w-100" style="margin-top: 125px">
-  <div style="margin-left: 20px" class="col-md-3">
-    <h5>Add User</h5>
-    <form [formGroup]="formGroup" (ngSubmit)="onAdd()">
-      <!-- Material Card using Form -->
-      <mat-card class="tblcolwidth-lg">
-        <mat-card-header>
-          <mat-card-subtitle>New User can be Added Here </mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content>
-          <p>
-            <mat-form-field
-              class="tblcolwidth-xmd"
-              hintLabel="Max 25 characters"
-              appearance="fill"
-            >
-              <mat-label>Employee ID</mat-label>
-              <input
-                matInput
-                #input
-                type="number"
-                maxlength="25"
-                [formControl]="aEmpIdControl"
-                required
-              />
-              <mat-hint align="end">{{ input.value?.length || 0 }}/25</mat-hint>
-            </mat-form-field>
-          </p>
-          <p>
-            <mat-form-field
-              class="tblcolwidth-xmd"
-              hintLabel="Max 25 characters"
-              appearance="fill"
-            >
-              <mat-label>Employee Name</mat-label>
-              <input
-                matInput
-                #input
-                maxlength="25"
-                [formControl]="aEmpNameControl"
-                required
-              />
-              <mat-hint align="end">{{ input.value?.length || 0 }}/25</mat-hint>
-            </mat-form-field>
-          </p>
-          <p>
-            <mat-form-field
-              class="tblcolwidth-xmd"
-              hintLabel="Max 25 characters"
-              appearance="fill"
-            >
-              <mat-label>NTLG</mat-label>
-              <input
-                matInput
-                #input
-                maxlength="25"
-                [formControl]="aNtlgControl"
-                required
-              />
-              <mat-hint align="end">{{ input.value?.length || 0 }}/25</mat-hint>
-            </mat-form-field>
-          </p>
-          <p>
-            <mat-form-field
-              class="tblcolwidth-xmd"
-              hintLabel="Max 10 characters"
-              appearance="fill"
-            >
-              <mat-label>Password</mat-label>
-              <input
-                matInput
-                maxlength="10"
-                [type]="hide ? 'password' : 'text'"
-                [formControl]="aPassControl"
-                required
-              />
-              <button
-                mat-icon-button
-                matSuffix
-                (click)="hide = !hide"
-                [attr.aria-label]="'Hide password'"
-                [attr.aria-pressed]="hide"
-              >
-                <mat-icon>{{
-                  hide ? "visibility_off" : "visibility"
-                }}</mat-icon>
-              </button>
-              <mat-hint align="end">{{ input.value?.length || 0 }}/10</mat-hint>
-            </mat-form-field>
-          </p>
-          <p>
-            <mat-form-field class="tblcolwidth-xmd" appearance="fill">
-              <mat-label>Select Client</mat-label>
-              <mat-select [formControl]="aClientControl" required>
-                <mat-optgroup>
-                  <mat-option
-                    *ngFor="let item of clientsData"
-                    [value]="item.clientId"
-                  >
-                    {{ item.clientName }}
-                  </mat-option>
-                </mat-optgroup>
-              </mat-select>
-              <mat-hint>Client names ^</mat-hint>
-            </mat-form-field>
-          </p>
-          <p>
-            <mat-form-field
-              class="tblcolwidth-xmd"
-              hintLabel="Max 25 characters"
-              appearance="fill"
-            >
-              <mat-label>PseudoName</mat-label>
-              <input
-                matInput
-                #input
-                maxlength="25"
-                [formControl]="apseudoNameControl"
-                required
-              />
-              <mat-hint align="end">{{ input.value?.length || 0 }}/25</mat-hint>
-            </mat-form-field>
-          </p>
-          <p>
-            <mat-form-field class="tblcolwidth-xmd" appearance="fill">
-              <mat-label>Select Role </mat-label>
-              <mat-select [formControl]="aRoleControl" required>
-                <mat-optgroup>
-                  <mat-option *ngFor="let item of roles" [value]="item">
-                    {{ item.roleName }}
-                  </mat-option>
-                </mat-optgroup>
-              </mat-select>
-              <mat-hint>Client names ^</mat-hint>
-            </mat-form-field>
-          </p>
-          <p>
-            <mat-form-field
-              class="tblcolwidth-xmd"
-              hintLabel="Max 5 characters"
-              appearance="fill"
-            >
-              <mat-label>Production Target</mat-label>
-              <input
-                matInput
-                #input
-                type="number"
-                maxlength="5"
-                [formControl]="aProdControl"
-                required
-              />
-              <mat-hint align="end">{{ input.value?.length || 0 }}/5</mat-hint>
-            </mat-form-field>
-          </p>
-          <p>
-            <label style="width: 200px"
-              >Active : &nbsp;&nbsp;&nbsp;&nbsp;</label
-            >
-            <mat-radio-group [formControl]="aActiveControl" required>
-              <mat-radio-button value="Y">Yes</mat-radio-button>&nbsp;&nbsp;
-              <mat-radio-button value="N">No</mat-radio-button>
-            </mat-radio-group>
-          </p>
-        </mat-card-content>
-        <mat-card-actions>
-          <button
-            mat-raised-button
-            [disabled]="loading"
-            class="mat-elevation-z2"
-            type="submit"
-            class="buttoncolour"
-          >
-            <mat-icon>add_circle</mat-icon
-            ><span
-              *ngIf="loading"
-              class="spinner-border spinner-border-sm mr-1"
-            ></span>
-            Add
-          </button>
-        </mat-card-actions>
-      </mat-card>
-    </form>
-  </div>
-
   <div class="col-md-6">
     <h5>View Users</h5>
 
-    <mat-paginator
-      class="tblcolswidth"
-      [length]="100"
-      [pageSize]="10"
-      [pageSizeOptions]="[5, 10, 25, 50]"
-      showFirstLastButtons
-    >
-    </mat-paginator>
+    
     <!-- Material Client Mapping Table -->
     <mat-table
       [dataSource]="dataSource"
-      class="mat-elevation-z1 tblcolswidth"
+      class="mat-elevation-z1"
       width="100%"
     >
       <!-- configurationFlag Column -->
@@ -230,6 +40,7 @@
             <mat-icon color="warn">disabled_by_default</mat-icon>
           </button>
         </mat-cell>
+        
       </ng-container>
 
       <!-- empid Column -->
@@ -445,9 +256,198 @@
         class="instblwidth"
       ></mat-row>
     </mat-table>
+    <mat-paginator
+      class="tblcolswidth"
+      [length]="100"
+      [pageSize]="10"
+      [pageSizeOptions]="[5, 10, 25, 50]"
+      showFirstLastButtons
+    >
+    </mat-paginator>
+  </div>
+  <div  class="col-md-6">
+    <h5>Add User</h5>
+    <form [formGroup]="formGroup" (ngSubmit)="onAdd()">
+      <!-- Material Card using Form -->
+      <mat-card class="">
+        <mat-card-header>
+          <mat-card-subtitle>New User can be Added Here </mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+          
+            <mat-form-field
+              class="tblcolwidth-xmd"
+              hintLabel="Max 25 characters"
+              appearance="fill"
+            >
+              <mat-label>Employee ID</mat-label>
+              <input
+                matInput
+                #input
+                type="number"
+                maxlength="25"
+                [formControl]="aEmpIdControl"
+                required
+              />
+              <mat-hint align="end">{{ input.value?.length || 0 }}/25</mat-hint>
+            </mat-form-field>
+         
+            <mat-form-field
+              class="tblcolwidth-xmd"
+              hintLabel="Max 25 characters"
+              appearance="fill"
+            >
+              <mat-label>Employee Name</mat-label>
+              <input
+                matInput
+                #input
+                maxlength="25"
+                [formControl]="aEmpNameControl"
+                required
+              />
+              <mat-hint align="end">{{ input.value?.length || 0 }}/25</mat-hint>
+            </mat-form-field>
+
+          
+
+          
+            <mat-form-field
+              class="tblcolwidth-xmd"
+              hintLabel="Max 25 characters"
+              appearance="fill"
+            >
+              <mat-label>NTLG</mat-label>
+              <input
+                matInput
+                #input
+                maxlength="25"
+                [formControl]="aNtlgControl"
+                required
+              />
+              <mat-hint align="end">{{ input.value?.length || 0 }}/25</mat-hint>
+            </mat-form-field>
+            <mat-form-field
+              class="tblcolwidth-xmd"
+              hintLabel="Max 10 characters"
+              appearance="fill"
+            >
+              <mat-label>Password</mat-label>
+              <input
+                matInput
+                maxlength="10"
+                [type]="hide ? 'password' : 'text'"
+                [formControl]="aPassControl"
+                required
+              />
+              <button
+                mat-icon-button
+                matSuffix
+                (click)="hide = !hide"
+                [attr.aria-label]="'Hide password'"
+                [attr.aria-pressed]="hide"
+              >
+                <mat-icon>{{
+                  hide ? "visibility_off" : "visibility"
+                }}</mat-icon>
+              </button>
+              <mat-hint align="end">{{ input.value?.length || 0 }}/10</mat-hint>
+            </mat-form-field>
+          
+
+          
+            <mat-form-field class="tblcolwidth-xmd" appearance="fill">
+              <mat-label>Select Client</mat-label>
+              <mat-select [formControl]="aClientControl" required>
+                <mat-optgroup>
+                  <mat-option
+                    *ngFor="let item of clientsData"
+                    [value]="item.clientId"
+                  >
+                    {{ item.clientName }}
+                  </mat-option>
+                </mat-optgroup>
+              </mat-select>
+              <mat-hint>Client names ^</mat-hint>
+            </mat-form-field>
+         
+         
+            <mat-form-field
+              class="tblcolwidth-xmd"
+              hintLabel="Max 25 characters"
+              appearance="fill"
+            >
+              <mat-label>PseudoName</mat-label>
+              <input
+                matInput
+                #input
+                maxlength="25"
+                [formControl]="apseudoNameControl"
+                required
+              />
+              <mat-hint align="end">{{ input.value?.length || 0 }}/25</mat-hint>
+            </mat-form-field>
+          
+
+          
+            <mat-form-field class="tblcolwidth-xmd" appearance="fill">
+              <mat-label>Select Role </mat-label>
+              <mat-select [formControl]="aRoleControl" required>
+                <mat-optgroup>
+                  <mat-option *ngFor="let item of roles" [value]="item">
+                    {{ item.roleName }}
+                  </mat-option>
+                </mat-optgroup>
+              </mat-select>
+              <mat-hint>Client names ^</mat-hint>
+            </mat-form-field>
+            <mat-form-field
+              class="tblcolwidth-xmd"
+              hintLabel="Max 5 characters"
+              appearance="fill"
+            >
+              <mat-label>Production Target</mat-label>
+              <input
+                matInput
+                #input
+                type="number"
+                maxlength="5"
+                [formControl]="aProdControl"
+                required
+              />
+              <mat-hint align="end">{{ input.value?.length || 0 }}/5</mat-hint>
+            </mat-form-field>
+          
+          
+            <label style="width: 200px"
+              >Active : &nbsp;&nbsp;&nbsp;&nbsp;</label
+            >
+            <mat-radio-group [formControl]="aActiveControl" required>
+              <mat-radio-button value="Y">Yes</mat-radio-button>&nbsp;&nbsp;
+              <mat-radio-button value="N">No</mat-radio-button>
+            </mat-radio-group>
+          
+        </mat-card-content>
+        <mat-card-actions>
+          <button
+            mat-raised-button
+            [disabled]="loading"
+            class="mat-elevation-z2"
+            type="submit"
+            class="buttoncolour"
+          >
+            <mat-icon>add_circle</mat-icon
+            ><span
+              *ngIf="loading"
+              class="spinner-border spinner-border-sm mr-1"
+            ></span>
+            Add
+          </button>
+        </mat-card-actions>
+      </mat-card>
+    </form>
   </div>
 </div>
 <!-- footer -->
-<footer class="content1">
+<!--<footer class="content1" >
   &copy; <b>eSpyCons 2020 | All Rights Reserved</b>
-</footer>
+</footer>-->
