--- a/src/app/components/masters/users/users.component.scss
+++ b/src/app/components/masters/users/users.component.scss
@@ -24,7 +24,7 @@ $tblcoltot: 300px; // 10sm
   min-width: $tblcollg;
   width: $tblcollg;
   max-width: $tblcollg;
-  margin-left: -26px;
+  /*margin-left: -26px;*/
 }
 .instblwidth {
   width: 1235px;
@@ -33,8 +33,8 @@ footer {
   display: flex;
   align-items: center;
   position: relative;
-  top: 5px;
-  bottom: 0px;
+  top: 5px; 
+   bottom: 0px;
   line-height: 18px;
 }
 
@@ -54,4 +54,12 @@ footer a {
 
 .mat-row:nth-child(odd) {
   background-color: inherit;
+}
+
+.mat-form-field{
+  margin: 0px 10px 15px 0px;
+}
+
+.mat-card-actions{
+  text-align: right;
 }
