footer optimization in production report

--- a/src/app/components/reports/production-report/production-report.component.scss
+++ b/src/app/components/reports/production-report/production-report.component.scss
@@ -19,7 +19,7 @@ footer {
   display: flex;
   align-items: center;
   position: relative;
-  top: 391px;
+  //top: 391px;
   bottom: 0px;
   line-height: 18px;
 }
