--- a/src/app/components/masters/scenario/scenario.component.html
+++ b/src/app/components/masters/scenario/scenario.component.html
@@ -1,113 +1,6 @@
 <div class="row font-weight-normal w-100" style="margin-top: 125px">
-  <div style="margin-left: 20px">
-    <h5>Add Scenario Code</h5>
-    <form [formGroup]="formGroup" (ngSubmit)="onAdd()">
-      <!-- Material Card using Form -->
-      <mat-card class="tblcolwidth-lg">
-        <mat-card-header>
-          <mat-card-subtitle
-            >New Scenario codes can be Added Here
-          </mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content>
-          <p>
-            <mat-form-field class="tblcolwidth-xmd" appearance="fill">
-              <mat-label>Client Name</mat-label>
-              <input
-                matInput
-                #input
-                maxlength="25"
-                [value]="currClientName"
-                readonly
-                disabled
-              />
-              <mat-hint>selected client name ^</mat-hint>
-            </mat-form-field>
-          </p>
-          <p>
-            <mat-form-field
-              class="tblcolwidth-xmd"
-              hintLabel="Max 25 characters"
-              appearance="fill"
-            >
-              <mat-label>Scenario Name</mat-label>
-              <input
-                matInput
-                #input
-                maxlength="25"
-                [formControl]="aScenarioControl"
-                required
-              />
-              <mat-hint align="end">{{ input.value?.length || 0 }}/25</mat-hint>
-            </mat-form-field>
-          </p>
-          <p>
-            <mat-form-field class="tblcolwidth-xmd" appearance="fill">
-              <mat-label>Scenario Description</mat-label>
-              <textarea
-                matInput
-                [formControl]="aNotesControl"
-                style="height: 150px"
-                required
-              ></textarea>
-            </mat-form-field>
-          </p>
-          <p>
-            <mat-form-field
-              class="tblcolwidth-xmd"
-              hintLabel="Max 25 characters"
-              appearance="fill"
-            >
-              <mat-label hintLabel="Max 25 characters"
-                >Select an Callback</mat-label
-              >
-              <mat-select [formControl]="aCallback" required>
-                <mat-option value="Y">Yes</mat-option>
-                <mat-option value="N">No</mat-option>
-              </mat-select>
-            </mat-form-field>
-          </p>
-          <p>
-            <label style="width: 200px"
-              >Active : &nbsp;&nbsp;&nbsp;&nbsp;</label
-            >
-            <mat-radio-group [formControl]="aActiveControl" required>
-              <mat-radio-button value="Yes">Yes</mat-radio-button>&nbsp;&nbsp;
-              <mat-radio-button value="No">No</mat-radio-button>
-            </mat-radio-group>
-          </p>
-        </mat-card-content>
-        <mat-card-actions>
-          <button
-            mat-raised-button
-            [disabled]="loading"
-            class="mat-elevation-z2"
-            type="submit"
-            class="buttoncolour"
-          >
-            <mat-icon>add_circle</mat-icon
-            ><span
-              *ngIf="loading"
-              class="spinner-border spinner-border-sm mr-1"
-            ></span>
-            Add
-          </button>
-        </mat-card-actions>
-      </mat-card>
-    </form>
-  </div>
-
-  <div class="col-md">
+ <div class="col-md">
     <h5>View Scenario Codes</h5>
-
-    <mat-paginator
-      class="tblcolswidth"
-      [length]="100"
-      [pageSize]="7"
-      [pageSizeOptions]="[7, 10, 25, 50]"
-      showFirstLastButtons
-    >
-    </mat-paginator>
     <!-- Material Client Mapping Table -->
     <mat-table
       [dataSource]="dataSource"
@@ -255,6 +148,111 @@
       ></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
     </mat-table>
+    <mat-paginator
+    class="tblcolswidth"
+    [length]="100"
+    [pageSize]="7"
+    [pageSizeOptions]="[7, 10, 25, 50]"
+    showFirstLastButtons
+  >
+  </mat-paginator>
+  </div>
+  <div style="margin-left: 20px">
+    
+    <form [formGroup]="formGroup" (ngSubmit)="onAdd()">
+      <!-- Material Card using Form -->
+      <mat-card class="tblcolwidth-lg">
+        <mat-card-header>
+          <mat-card-subtitle
+            >Add Scenario Code
+          </mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+          <p>
+            <mat-form-field class="tblcolwidth-xmd" appearance="fill">
+              <mat-label>Client Name</mat-label>
+              <input
+                matInput
+                #input
+                maxlength="25"
+                [value]="currClientName"
+                readonly
+                disabled
+              />
+              <mat-hint>selected client name ^</mat-hint>
+            </mat-form-field>
+          </p>
+          <p>
+            <mat-form-field
+              class="tblcolwidth-xmd"
+              hintLabel="Max 25 characters"
+              appearance="fill"
+            >
+              <mat-label>Scenario Name</mat-label>
+              <input
+                matInput
+                #input
+                maxlength="25"
+                [formControl]="aScenarioControl"
+                required
+              />
+              <mat-hint align="end">{{ input.value?.length || 0 }}/25</mat-hint>
+            </mat-form-field>
+          </p>
+          <p>
+            <mat-form-field class="tblcolwidth-xmd" appearance="fill">
+              <mat-label>Scenario Description</mat-label>
+              <textarea
+                matInput
+                [formControl]="aNotesControl"
+                style="height: 150px"
+                required
+              ></textarea>
+            </mat-form-field>
+          </p>
+          <p>
+            <mat-form-field
+              class="tblcolwidth-xmd"
+              hintLabel="Max 25 characters"
+              appearance="fill"
+            >
+              <mat-label hintLabel="Max 25 characters"
+                >Select an Callback</mat-label
+              >
+              <mat-select [formControl]="aCallback" required>
+                <mat-option value="Y">Yes</mat-option>
+                <mat-option value="N">No</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </p>
+          <p>
+            <label style="width: 200px"
+              >Active : &nbsp;&nbsp;&nbsp;&nbsp;</label
+            >
+            <mat-radio-group [formControl]="aActiveControl" required>
+              <mat-radio-button value="Yes">Yes</mat-radio-button>&nbsp;&nbsp;
+              <mat-radio-button value="No">No</mat-radio-button>
+            </mat-radio-group>
+          </p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button
+            mat-raised-button
+            [disabled]="loading"
+            class="mat-elevation-z2"
+            type="submit"
+            class="buttoncolour"
+          >
+            <mat-icon>add_circle</mat-icon
+            ><span
+              *ngIf="loading"
+              class="spinner-border spinner-border-sm mr-1"
+            ></span>
+            Add
+          </button>
+        </mat-card-actions>
+      </mat-card>
+    </form>
   </div>
 </div>
 <!-- footer -->
