Implementation of cards in masters

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -71,5 +71,5 @@
 <br />
 <!-- Footer -->
 <footer class="content1">
-  &copy; <b>eSpyCons 2020 | All Rights Reserved</b>
+   <b> &copy; eSpyCons 2020 | All Rights Reserved</b>
 </footer> 
