--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -265,13 +265,11 @@ a:hover {
 }
 
 footer {
-  // margin-top: 320px;
-  //position:fixed;
-  //bottom:0px;
-  //top:400px;
   display: flex;
   align-items: center;
   line-height: 18px;
+  padding:5px 0px;
+
 }
 
 footer a {
