--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -71,5 +71,5 @@
 <br />
 <!-- Footer -->
 <footer class="content1">
-   <b> &copy; eSpyCons 2020 | All Rights Reserved</b>
+   &copy; eSpycons 2021 | All Rights Reserved
 </footer> 
