--- a/src/app/components/masters/client-mapping/client-mapping.component.html
+++ b/src/app/components/masters/client-mapping/client-mapping.component.html
@@ -1,59 +1,11 @@
 <div class="row font-weight-normal bgcolor w-100" style="margin-top: 111px">
-  <div style="margin-left: 20px">
-    <h5 class="text-dark">Client Mapping Actions</h5>
-    <!-- Material Card for File Upload -->
-    <mat-card class="tblcolwidth-lg">
+ 
+
+  <div class="col-md-9 w-100">
+    <mat-card class="" style="margin-left: 10px">
       <mat-card-header>
-        <mat-card-title>Upload File with Alias Name</mat-card-title>
-        <mat-card-subtitle
-          >Choose a suitable excel document for client configuration mapping
-        </mat-card-subtitle>
+        <mat-card-title>View Client Mapping</mat-card-title>
       </mat-card-header>
-      <mat-card-content>
-        <div class="ml-3">
-          <app-file-upload
-            (complete)="onFileComplete($event)"
-            [target]="uploadFileUrlPath"
-            (fileload)="onFileLoad($event)"
-          >
-          </app-file-upload>
-        </div>
-      </mat-card-content>
-
-      <mat-card-header *ngIf="isFileInfoShow()">
-        <mat-card-subtitle class="file-info file-info-success"
-          >File : {{ uiFileInfo.fileName }}<br />
-          Uploaded at : {{ uiFileInfo.infoTime }}
-        </mat-card-subtitle>
-      </mat-card-header>
-
-      <hr *ngIf="isFileInfoShow()" />
-      <mat-card-header *ngIf="isFileInfoShow()">
-        <mat-card-title>Recent Upload File History</mat-card-title>
-        <mat-chip-list>
-          <mat-chip
-            class="file-info"
-            (click)="clearFiles()"
-            style="cursor: pointer"
-          >
-            Clear History
-            <mat-icon>delete_forever</mat-icon>
-          </mat-chip>
-        </mat-chip-list>
-      </mat-card-header>
-      <mat-card-content *ngIf="isFileInfoShow()">
-        <ul>
-          <li *ngFor="let finfo of filesInfo.reverse()">
-            File: {{ finfo.fileName }} <br />
-            <span class="file-info">{{ finfo.infoTime }}</span>
-          </li>
-        </ul>
-      </mat-card-content>
-    </mat-card>
-  </div>
-
-  <div class="col-md">
-    <h5 class="text-dark">Client Configurations</h5>
     <!-- <button mat-raised-button (click)="addNewConfig($event)" class="mat-elevation-z2" [disabled]="!isAdd">Add
             New</button> -->
 
@@ -197,6 +149,59 @@
       <mat-icon>send</mat-icon> Submit
     </button>
     <br />
+    </mat-card>
+  </div>
+  <div class="col-md-3">
+    <h5 class="text-dark">Client Mapping Actions</h5>
+    <!-- Material Card for File Upload -->
+    <mat-card class="tblcolwidth-lg">
+      <mat-card-header>
+        <mat-card-title>Upload File with Alias Name</mat-card-title>
+        <mat-card-subtitle
+          >Choose a suitable excel document for client configuration mapping
+        </mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+        <div class="ml-3">
+          <app-file-upload
+            (complete)="onFileComplete($event)"
+            [target]="uploadFileUrlPath"
+            (fileload)="onFileLoad($event)"
+          >
+          </app-file-upload>
+        </div>
+      </mat-card-content>
+
+      <mat-card-header *ngIf="isFileInfoShow()">
+        <mat-card-subtitle class="file-info file-info-success"
+          >File : {{ uiFileInfo.fileName }}<br />
+          Uploaded at : {{ uiFileInfo.infoTime }}
+        </mat-card-subtitle>
+      </mat-card-header>
+
+      <hr *ngIf="isFileInfoShow()" />
+      <mat-card-header *ngIf="isFileInfoShow()">
+        <mat-card-title>Recent Upload File History</mat-card-title>
+        <mat-chip-list>
+          <mat-chip
+            class="file-info"
+            (click)="clearFiles()"
+            style="cursor: pointer"
+          >
+            Clear History
+            <mat-icon>delete_forever</mat-icon>
+          </mat-chip>
+        </mat-chip-list>
+      </mat-card-header>
+      <mat-card-content *ngIf="isFileInfoShow()">
+        <ul>
+          <li *ngFor="let finfo of filesInfo.reverse()">
+            File: {{ finfo.fileName }} <br />
+            <span class="file-info">{{ finfo.infoTime }}</span>
+          </li>
+        </ul>
+      </mat-card-content>
+    </mat-card>
   </div>
 </div>
 <!-- footer -->
