--- a/src/app/components/masters/scenario/scenario.component.html
+++ b/src/app/components/masters/scenario/scenario.component.html
@@ -1,7 +1,9 @@
 <div class="row font-weight-normal w-100" style="margin-top: 125px">
- <div class="col-md">
-    <h5>View Scenario Codes</h5>
-    <!-- Material Client Mapping Table -->
+ <div class="col-md-9 w-100">
+  <mat-card class="" style="margin-left:10px">
+    <mat-card-header>
+      <mat-card-title>View Scenario Codes</mat-card-title>
+    </mat-card-header>
     <mat-table
       [dataSource]="dataSource"
       class="mat-elevation-z1 tblcolswidth"
@@ -68,7 +70,7 @@
         </mat-cell>
       </ng-container>
 
-      <!-- Callback column -->
+     <!-- Callback column -->
       <ng-container matColumnDef="callbackApplicable" sticky>
         <mat-header-cell *matHeaderCellDef class="th-light tblcolwidth-md">
           Callback
@@ -109,7 +111,7 @@
         </mat-cell>
       </ng-container>
 
-      <!-- configurationFlag Column -->
+     <!-- configurationFlag Column -->
       <ng-container matColumnDef="configurationFlag" sticky>
         <mat-header-cell *matHeaderCellDef class="th-light tblcolwidth-sm">
           Actions
@@ -149,26 +151,27 @@
       <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
     </mat-table>
     <mat-paginator
-    class="tblcolswidth"
+    class=""
     [length]="100"
     [pageSize]="7"
     [pageSizeOptions]="[7, 10, 25, 50]"
     showFirstLastButtons
   >
   </mat-paginator>
+  </mat-card>
   </div>
-  <div style="margin-left: 20px">
+  <div class="col-md-3">
     
     <form [formGroup]="formGroup" (ngSubmit)="onAdd()">
       <!-- Material Card using Form -->
-      <mat-card class="tblcolwidth-lg">
+      <mat-card class="">
         <mat-card-header>
           <mat-card-subtitle
             >Add Scenario Code
           </mat-card-subtitle>
         </mat-card-header>
         <mat-card-content>
-          <p>
+          
             <mat-form-field class="tblcolwidth-xmd" appearance="fill">
               <mat-label>Client Name</mat-label>
               <input
@@ -181,8 +184,8 @@
               />
               <mat-hint>selected client name ^</mat-hint>
             </mat-form-field>
-          </p>
-          <p>
+          
+          
             <mat-form-field
               class="tblcolwidth-xmd"
               hintLabel="Max 25 characters"
@@ -198,19 +201,17 @@
               />
               <mat-hint align="end">{{ input.value?.length || 0 }}/25</mat-hint>
             </mat-form-field>
-          </p>
-          <p>
+          
             <mat-form-field class="tblcolwidth-xmd" appearance="fill">
               <mat-label>Scenario Description</mat-label>
               <textarea
                 matInput
                 [formControl]="aNotesControl"
-                style="height: 150px"
+                style="height:75px"
                 required
               ></textarea>
             </mat-form-field>
-          </p>
-          <p>
+         
             <mat-form-field
               class="tblcolwidth-xmd"
               hintLabel="Max 25 characters"
@@ -224,8 +225,7 @@
                 <mat-option value="N">No</mat-option>
               </mat-select>
             </mat-form-field>
-          </p>
-          <p>
+          
             <label style="width: 200px"
               >Active : &nbsp;&nbsp;&nbsp;&nbsp;</label
             >
@@ -233,7 +233,7 @@
               <mat-radio-button value="Yes">Yes</mat-radio-button>&nbsp;&nbsp;
               <mat-radio-button value="No">No</mat-radio-button>
             </mat-radio-group>
-          </p>
+          
         </mat-card-content>
         <mat-card-actions>
           <button
